# bkpaas-python-sdk

./: .gitignore  .pre-commit-config.yaml  License.txt  pyproject.toml  readme.md  readme_en.md
.ci/: blue-krill.yml  (+3 more)
sdks/apigw-manager/: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGE.md  Dockerfile  Makefile  README.md  README.rst  definition.yaml  manage.py  mypy.ini  pyproject.toml  requirements_dev.txt  requirements_tox.txt  setup.py  sync_apigateway.sh  tox.ini
sdks/apigw-manager/demo/: __init__.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
sdks/apigw-manager/docs/: jwt-explain.md  plugin-use-guide.md  sync-apigateway-with-django.md  sync-apigateway-with-docker.md  sync_apigateway.md  sync_apigw.md
sdks/apigw-manager/examples/chart-configmap/templates/: sync-apigateway-job.yaml
sdks/apigw-manager/examples/chart-custom-docker/: Dockerfile  README.md
sdks/apigw-manager/examples/custom-docker/: Dockerfile
sdks/apigw-manager/tests/: conftest.py
sdks/apigw-manager/tests/demo/: test_views.py
sdks/bk-storages/: .pre-commit-config.yaml  CHANGE.md  README.md  noxfile.py  pyproject.toml  requirements-tests.txt  setup.py  tox.ini
sdks/bk-storages/bkstorages/: __init__.py  exceptions.py  utils.py
sdks/bk-storages/bkstorages/backends/: bkrepo.py  rgw.py
sdks/bk-storages/tests/: conftest.py  models.py  test_bkrepo.py  test_rgw.py
sdks/bkapi-client-core/: .gitignore  .pre-commit-config.yaml  CHANGE.md  Makefile  README.md  class_diagram.md  noxfile.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_tox.txt
sdks/bkapi-client-core/bkapi_client_core/: __init__.py  auth.py  base.py  client.py  config.py  django_helper.py  exceptions.py  prometheus.py  prometheus_helper.py  property.py  session.py  utils.py
sdks/bkapi-client-core/bkapi_client_core/apigateway/: __init__.py  client.py  django_helper.py
sdks/bkapi-client-core/bkapi_client_core/esb/: __init__.py  client.py  django_helper.py
sdks/bkapi-client-core/demo/: client.py  client.pyi  shortcuts.py  test_client.py  test_shortcuts.py
sdks/bkapi-client-core/tests/: conftest.py  django_settings.py  test_auth.py  test_base.py  test_client.py  test_config.py  test_django_helper.py  test_exceptions.py  test_prometheus.py  test_property.py  test_session.py  test_utils.py  test_version.py
sdks/bkapi-client-core/tests/apigateway/: test_client.py  test_django_helper.py
sdks/bkapi-client-core/tests/esb/: test_client.py  test_django_helper.py
sdks/bkapi-component-open/: CHANGE.md  README.md  noxfile.py  pyproject.toml  setup.py
sdks/bkapi-component-open/bkapi_component/: __init__.py
sdks/bkapi-component-open/bkapi_component/open/: __init__.py  client.py  client.pyi  shortcuts.py
sdks/bkpaas-auth/: .flake8  .pre-commit-config.yaml  AGENTS.md  CHANGES.md  README.md  README.rst  noxfile.py  pyproject.toml  setup.py  tox.ini
sdks/bkpaas-auth/bkpaas_auth/: __init__.py  apps.py  backends.py  conf.py  middlewares.py  models.py  monkey.py  user.py  utils.py
sdks/bkpaas-auth/bkpaas_auth/core/: algorithms.py  constants.py  encoder.py  exceptions.py  http.py  plugins.py  services.py  token.py  user_info.py
sdks/bkpaas-auth/tests/: conftest.py  test_backends.py  test_middlewares.py  test_misc.py  test_models.py  test_utils.py  utils.py
sdks/bkpaas-auth/tests/core/: test_bk_token.py  test_encoder.py  test_services.py  test_token.py
sdks/blue-krill/: .gitignore  .pre-commit-config.yaml  CHANGE.md  Makefile  README.md  README.rst  noxfile.py  pyproject.toml  setup.py  tox.ini
sdks/blue-krill/blue_krill/: __init__.py  contextlib.py  cubing_case.py  encoding.py  termcolors.py  text.py
sdks/blue-krill/blue_krill/async_utils/: django_utils.py  poll_task.py
sdks/blue-krill/blue_krill/auth/: client.py  jwt.py  utils.py
sdks/blue-krill/blue_krill/connections/: decorators.py  exceptions.py  ha_algorithm.py  ha_endpoint_pool.py
sdks/blue-krill/blue_krill/data_types/: enum.py  url.py
sdks/blue-krill/blue_krill/editions/: __init__.py  editionctl.py
sdks/blue-krill/blue_krill/encrypt/: handler.py  legacy.py  utils.py
sdks/blue-krill/blue_krill/models/: fields.py
sdks/blue-krill/blue_krill/redis_tools/: messaging.py  sentinel.py
sdks/blue-krill/blue_krill/secure/: bk_secure.py  dj_environ.py
sdks/blue-krill/blue_krill/web/: drf_utils.py  std_error.py
sdks/blue-krill/tests/: conftest.py  test_cubing_case.py  test_encrypt.py  test_haendpoint_pool.py  test_redis_tools.py  test_text.py  utils.py
sdks/blue-krill/tests/async_utils/: test_django_utils.py  test_poll_task.py
sdks/blue-krill/tests/auth/: test_jwt.py  test_utils.py
sdks/blue-krill/tests/data_types/: test_enum.py  test_url.py
sdks/blue-krill/tests/editions/: test_editionctl.py
sdks/blue-krill/tests/models/: test_fields.py
sdks/blue-krill/tests/secure/: test_dj_environ.py
sdks/blue-krill/tests/storages/: conftest.py  test_bkrepo.py  test_s3.py
sdks/blue-krill/tests/web/: test_drf_utils.py  test_std_error.py
sdks/paas-service/: .flake8  .gitignore  .pre-commit-config.yaml  CHANGES.md  Makefile  README.md  manage.py  noxfile.py  pyproject.toml  setup.py
sdks/paas-service/paas_service/: __init__.py  admin.py  apps.py  base_vendor.py  constants.py  fields.py  idem_prov.py  mixins.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
sdks/paas-service/paas_service/auth/: __init__.py  backends.py  decorator.py  middleware.py
sdks/paas-service/paas_service/management/: __init__.py
sdks/paas-service/paas_service/migrations/: 0001_initial.py  0002_serviceinstance_need_to_delete.py  0003_auto_20200102_2209.py  0004_serviceinstanceconfig.py  0005_auto_20210202_1055.py  0006_auto_20210223_0948.py  0007_auto_20220426_0225.py  0008_auto_20220426_0429.py  0009_alter_plan_unique_together_plan_tenant_id_and_more.py  0009_plan_display_name_plan_tenant_id.py  0010_operationlock_instancerecord.py  0010_provisionrecord.py
sdks/paas-service/tests/: __init__.py  conftest.py  settings.py  test_apis.py  test_auth.py  test_idem_prov.py  test_login.py  test_specs.py  test_utils.py  urls.py
(+167 files in other folders)
