[tool.poetry]
name = "蓝鲸 PaaS 平台 Python 工具集"
version = "0.0.1"
description = "BlueKing PaaS Python SDK"
authors = ["blueking <blueking@tencent.com>"]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
PyJWT = ">=1.7.1"

[tool.poetry.dev-dependencies]
# black
black = "^21.7b0"
# isort
isort = "^5.9.2"
# flake8
pyproject-flake8 = "^0.0.1-alpha.2"
flake8-comprehensions = "^3.5.0"
# pytest
pytest = "^6.2.4"
pytest-django = "^3.9.0"
pytest-cov = "^2.8.1"

[tool.black]
line-length = 119
skip-string-normalization = 'true'

[tool.isort]
multi_line_output = 3
include_trailing_comma = 'true'
force_grid_wrap = 0
use_parentheses = 'true'
line_length = 119
skip_glob = ["*/migrations/**", "*/node_modules/**"]
known_local_folder = [
  "tests",
  # Knonwn Python packages
  "blue_krill",
  "bkpaas_auth",
  "bkapi_client_core",
  "bkapi_component",
  "bk_storages",
  "apigw_manager"
]

[tool.flake8]
ignore = "F405,C901,E203,W503"
max-line-length = 119
max-complexity = 8
format = "pylint"
exclude = "*migrations*,*.pyc,.git,__pycache__,*/node_modules/*,*/bin/*"
