[tool.poetry]
name = "apigw-manager"
version = "3.2.0"
description = "The SDK for managing blueking gateway resource."
readme = "README.md"
authors = ["blueking <blueking@tencent.com>"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]


[project.urls]
Homepage = "https://github.com/TencentBlueKing/bkpaas-python-sdk/"
Repository = "https://github.com/TencentBlueKing/bkpaas-python-sdk/"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
setuptools = ">=21.0.0"
urllib3 = ">=1.25.3"
pyyaml = ">=5.4.2"
bkapi-client-core = ">=1.2.0"
bkapi-bk-apigateway = "^1.0.11"
pyjwt = { version = ">=1.6.4", optional = true }
django-environ = { version = ">=0.8.1", optional = true }
Django = { version = ">=1.11.1", optional = true }
cryptography = { version = ">=3.1.1", optional = true }
packaging = { version = ">=20.4" }
PyMySQL = { version = "^1.0.2", optional = true }
kubernetes = { version = "*", optional = true }
djangorestframework = { version = ">=3.10.3", optional = true }
drf-spectacular = { version = "<=0.27.2", optional = true }

[tool.poetry.extras]
cryptography = ["cryptography", "pyjwt"]
drf = ["django", "cryptography", "pyjwt", "djangorestframework", "drf-spectacular"]
django = ["django", "pyjwt"]
demo = ["django-environ", "django", "PyMySQL", "pyjwt"]
kubernetes = ["kubernetes"]

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-django = "^4.9.0"
pytest-pretty = "1.2.0"
Faker = "33.0.0"
mypy = "*"
pre-commit = "^3"
m2r = "^0.2.1"
tox = "4.23.2"
tox-pyenv-redux = "^1.1.0"
ipython = "^7"
twine = "5.1.1"
django = ">=1.11.1"
kubernetes = "31.0.0"
types-PyYAML = "6.0.12.9"
types-PyMySQL = "1.1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
no_implicit_optional = true
show_error_codes = true
strict_optional = true
pretty = true

[[tool.mypy.overrides]]
module = ["*.migrations.*"]
ignore_errors = true

[tool.pytest.ini_options]
addopts = "-p no:pastebin -p no:nose -p no:doctest -p no:warnings"
testpaths = ["tests"]
