[tool.poetry]
name = "bkstorages"
version = "2.0.0"
description = "File storage backends for blueking PaaS platform"
readme = "README.md"
authors = ["blueking <blueking@tencent.com>"]
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Framework :: Django",
]

[project.urls]
Homepage = "https://github.com/TencentBlueKing/bkpaas-python-sdk/"
Repository = "https://github.com/TencentBlueKing/bkpaas-python-sdk/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
boto3 = ">=1.4.1"
six = "*"
requests = "*"
curlify = "^2.2.1"
django = ">=3.2.25"

[tool.poetry.dev-dependencies]
six = ">=1.14"
# For flake8 support pyproject.toml
toml = "0.10.1"
pyproject-flake8 = "^0.0.1-alpha.2"
flake8-comprehensions = "^3.5.0"
# pytest
pytest = "6.2.5"
pytest-django = "4.1.0"
requests-mock = "^1.8.0"
# black
black = "*"
# mypy
mypy = "*"
# install extension stubs if missing
types-requests = "2.25.0"
types-setuptools = "57.0.0"
types-six = "0.1.7"
types-toml = "0.1.3"
# isort
isort = "^5.9.2"
moto = { extras = ["s3"], version = "^3.1.3" }

[tool.black]
line-length = 119
skip-string-normalization = 'true'
exclude = '''
/(
  | .+/dist/.*
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = 'true'
force_grid_wrap = 0
use_parentheses = 'true'
line_length = 119
# ignore example
skip_glob = ["*/dist/**"]

[tool.flake8]
ignore = "C901,E203,W503"
max-line-length = 119
max-complexity = 12
format = "pylint"
# ignore example
exclude = "*.pyc,.git,__pycache__,*/dist/*"

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
strict_optional = false
pretty = true

[[tool.mypy.overrides]]
module = ["*.dist.*"]
ignore_errors = true
