[tool.poetry]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Framework :: Django",
]

[project]
name = "bkstorages"
version = "2.0.2"
description = "File storage backends for blueking PaaS platform"
readme = "README.md"
authors = [{ name = "blueking", email = "blueking@tencent.com" }]
license = "MIT"
dynamic = ["classifiers"]
requires-python = '>=3.8,<3.12'
dependencies = ['django (>=4.2,<5.0)', 'requests', 'six', 'boto3 (>=1.4.1)', 'curlify (>=2.2.1)']

[project.urls]
Homepage = "https://github.com/TencentBlueKing/bkpaas-python-sdk/"
Repository = "https://github.com/TencentBlueKing/bkpaas-python-sdk/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
# pytest
pytest = "^6.2.5"
pytest-django = "4.1.0"
requests-mock = "^1.8.0"
mypy = "^1.12.0"
types-requests = "^2.27.16"
types-six = "^1.16.12"
moto = { extras = ["s3"], version = "^3.1.3" }

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
strict_optional = false
pretty = true

