[tool.poetry]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Framework :: Django",
]

[project]
name = "bkstorages"
version = "2.0.3"
description = "File storage backends for blueking PaaS platform"
readme = "README.md"
authors = [{ name = "blueking", email = "blueking@tencent.com" }]
license = "MIT"
dynamic = ["classifiers"]
requires-python = '>=3.11,<3.14'
dependencies = ['django (>=5.2,<6.0)', 'requests', 'boto3 (>=1.4.1)', 'curlify (>=2.2.1)']

[project.urls]
Homepage = "https://github.com/TencentBlueKing/bkpaas-python-sdk/"
Repository = "https://github.com/TencentBlueKing/bkpaas-python-sdk/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
# pytest
pytest = "^8.3"
pytest-django = "^4.9"
pytest-mock = "^3.14"
requests-mock = "^1.12"
mypy = "^1.12.0"
types-requests = "^2.32"
moto = { extras = ["s3"], version = "^5.0" }
boto3 = "^1.34"

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
strict_optional = false
pretty = true
