[tool.poetry]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "bkapi-client-core"
version = "1.2.1"
description = "A toolkit for buiding blueking API clients."
readme = "README.md"
authors = [{ name = "blueking", email = "blueking@tencent.com" }]
license = "MIT"
# classifiers is dynamic because we want to create Python classifiers automatically
dynamic = ["classifiers"]
requires-python = ">=2.7,<4.0,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*"
dependencies = [
  "requests (>=2.20)",
  "typing (>=3.10.0); python_version == '2.7'",
  "curlify (>=2.0)",
  "typing-extensions (>=3.7.4)",
  "six",
]

[project.urls]
Homepage = "https://github.com/TencentBlueKing/bkpaas-python-sdk/"
Repository = "https://github.com/TencentBlueKing/bkpaas-python-sdk/"

[project.optional-dependencies]
django = ["bkoauth (>=0.0.10)", "prometheus-client (>=0.9.0)"]
monitor = ["prometheus-client (>=0.9.0)"]

[tool.poetry.group.dev.dependencies]
pytest = { version = "^7.0.1", python = "^3.6" }
pytest-cov = { version = "^4.0.0", python = "^3.6" }
pytest-mock = { version = "^3.6.1", python = "^3.6" }
pytest-django = { version = "^4.5.0", python = "^3.6" }
Faker = { version = "^14.2.1", python = "^3.6" }
mypy = { version = "^0.971", python = "^3.7" }
pre-commit = { version = "^2.17.0", python = "^3.7" }
requests-mock = { version = "^1.9.3" }
tox = { version = "^3.23.0", python = "^3.6" }
more-itertools = "^5.0"
types-requests = { version = "^2.25.0", python = "^3.6" }
types-six = { version = "1.16.21.9", python = "^3.6" }
dataclasses = { version = "0.8", python = "~3.6" }
django = "1.11.20"
prometheus-client = { version = "*" }
bkoauth = { version = "*", optional = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
no_implicit_optional = true
show_error_codes = true
strict_optional = true
pretty = true

[[tool.mypy.overrides]]
module = ["*.migrations.*"]
ignore_errors = true

[tool.pytest.ini_options]
addopts = "-p no:pastebin -p no:nose -p no:doctest -p no:warnings"
testpaths = ["tests"]
