[tool.poetry]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "bkapi-client-core"
version = "2.0.0"
description = "A toolkit for buiding blueking API clients."
readme = "README.md"
authors = [{ name = "blueking", email = "blueking@tencent.com" }]
license = "MIT"
# classifiers is dynamic because we want to create Python classifiers automatically
dynamic = ["classifiers"]
requires-python = ">=3.11,<3.15"
dependencies = [
  "requests (>=2.20)",
  "curlify (>=2.0,<3.0.0)",
  "typing-extensions (>=3.7.4)",
]

[project.urls]
Homepage = "https://github.com/TencentBlueKing/bkpaas-python-sdk/"
Repository = "https://github.com/TencentBlueKing/bkpaas-python-sdk/"

[project.optional-dependencies]
django = ["bkoauth (>=0.0.10)", "prometheus-client (>=0.9.0)"]
monitor = ["prometheus-client (>=0.9.0)"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-django = "^4.8.0"
Faker = "^30.0.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"
requests-mock = "^1.12.0"
more-itertools = "^10.5.0"
types-requests = "^2.32.0"
django = ">=5.2.0"
prometheus-client = ">=0.9.0"
bkoauth = ">=0.0.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
no_implicit_optional = true
show_error_codes = true
strict_optional = true
pretty = true

[[tool.mypy.overrides]]
module = ["*.migrations.*"]
ignore_errors = true

[tool.pytest.ini_options]
addopts = "-p no:pastebin -p no:nose -p no:doctest -p no:warnings"
testpaths = ["tests"]
