[tool.poetry]
classifiers = ["License :: OSI Approved :: MIT License"]

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "bkpaas-auth"
version = "3.1.3"
description = "User authentication django app for blueking internal projects"
readme = "README.md"
authors = [{ name = "blueking", email = "blueking@tencent.com" }]
license = "MIT"
# classifiers is dynamic because we want to create Python classifiers automatically
dynamic = ["classifiers"]
requires-python = '>=3.9,<4.0'
dependencies = ['django (>=4.2,<5.0)', 'requests', 'six']

[project.urls]
Homepage = "https://github.com/TencentBlueKing/bkpaas-python-sdk/"
Repository = "https://github.com/TencentBlueKing/bkpaas-python-sdk/"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
pytest-django = "^3.8.0"
mypy = "^1.12.0"
pytest-mock = "^3.4.0"
types-six = "^1.16.12"
types-requests = "^2.27.16"
types-mock = "^4.0.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
check_untyped_defs = true
