[tool.poetry]
classifiers = ["License :: OSI Approved :: MIT License"]

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "bkpaas-auth"
version = "4.0.0"
description = "User authentication django app for blueking internal projects"
readme = "README.md"
authors = [{ name = "blueking", email = "blueking@tencent.com" }]
license = "MIT"
# classifiers is dynamic because we want to create Python classifiers automatically
dynamic = ["classifiers"]
requires-python = '>=3.11,<4.0'
dependencies = ['django (>=4.2,<6.0)', 'requests']

[project.urls]
Homepage = "https://github.com/TencentBlueKing/bkpaas-python-sdk/"
Repository = "https://github.com/TencentBlueKing/bkpaas-python-sdk/"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-django = "^4.9"
mypy = "^1.12.0"
pytest-mock = "^3.14"
types-requests = "^2.32"
types-mock = "^4.0.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
check_untyped_defs = true
