[tool.poetry]
name = "blue-krill"
version = "2.0.3"
description = "Tools and common packages for blueking PaaS platform."
include = ["blue_krill/py.typed"]
readme = "README.md"
authors = ["blueking <blueking@tencent.com>"]
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/TencentBlueKing/bkpaas-python-sdk/"
Repository = "https://github.com/TencentBlueKing/bkpaas-python-sdk/"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
dataclasses = { version = "^0.7", python = ">=3.6.2,<3.7" }
cryptography = ">=3.0.0"
django-environ = "^0.8.1"
pyjwt = ">=1.7.1"
requests = "*"
six = "*"
click = "*"
pydantic = "*"
toml = "*"
python-editor = "^1.0.4"
watchdog = "^1.0.2"
curlify = "^2.2.1"
bk-crypto-python-sdk = "^1.0.4"

[tool.poetry.dev-dependencies]
redis = "^3.5.3"
django = "^3.2.0"
tox = "^3.18.1"
requests_mock = "^1.8.0"
requests-mock = "^1.8.0"
boto3 = "^1.16.45"
moto = "^2.3.2"
django-rest-framework = "^0.1.0"
celery = "^5.0.5"
# For flake8 support pyproject.toml
toml = "^0.10.1"
pyproject-flake8 = "^0.0.1-alpha.2"
flake8-comprehensions = "^3.5.0"
# pytest
pytest = "^6.2.2"
pytest-django = "^4.1.0"
# black
black = "23.7.0"
# mypy
mypy = "^0.910"
# install extension stubs if missing
types-requests = "^2.25.0"
types-setuptools = "^57.0.0"
types-dataclasses = "^0.1.5"
types-redis = "^3.5.4"
types-PyMySQL = "^1.0.0"
types-six = "^0.1.7"
types-toml = "^0.1.3"
# isort
isort = "^5.9.2"

[tool.poetry.scripts]
bk-secure = "blue_krill.secure.bk_secure:main"
editionctl = "blue_krill.editions.editionctl:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
skip-string-normalization = 'true'
exclude = '''
/(
  | .+/dist/.*
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = 'true'
force_grid_wrap = 0
use_parentheses = 'true'
line_length = 119
# ignore example
skip_glob = ["*/dist/**"]

[tool.flake8]
ignore = "C901,E203,W503"
max-line-length = 119
max-complexity = 12
format = "pylint"
# ignore example
exclude = "*.pyc,.git,__pycache__,*/dist/*,*migrations*"

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
check_untyped_defs = true
