[tool.poetry]
include = ["blue_krill/py.typed"]
classifiers = ["License :: OSI Approved :: MIT License"]

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "blue-krill"
description = "Tools and common packages for blueking PaaS platform."
requires-python = ">=3.9,<3.12"
license = "MIT"
version = "2.1.3"
# classifieres is dynamic because we want to create Python classifiers automatically
dynamic = ["classifiers"]
readme = "README.md"
authors = [{ name = "blueking", email = "blueking@tencent.com" }]
dependencies = [
  'dataclasses (>=0.7) ; python_full_version >= "3.6.2" and python_version < "3.7"',
  'cryptography (>=3.0.0)',
  'django-environ (>=0.8.1)',
  'pyjwt (>=1.7.1)',
  'requests',
  'six',
  'click',
  'pydantic',
  'toml',
  'python-editor (>=1.0.4,<2.0.0)',
  'watchdog',
  'curlify (>=2.2.1,<3.0.0)',
  'bk-crypto-python-sdk (>=2.0.0,<3.0.0)',
  'urllib3 (>=1.26.16,<2.0.0)',
]

[project.urls]
Homepage = "https://github.com/TencentBlueKing/bkpaas-python-sdk/"
Repository = "https://github.com/TencentBlueKing/bkpaas-python-sdk/"

[project.scripts]
bk-secure = "blue_krill.secure.bk_secure:main"
editionctl = "blue_krill.editions.editionctl:main"


[tool.poetry.group.dev.dependencies]
redis = "^3.5.3"
django = "^3.2.0"
tox = "^3.18.1"
requests_mock = "^1.8.0"
requests-mock = "^1.8.0"
boto3 = "^1.16.45"
moto = "^2.3.2"
django-rest-framework = "^0.1.0"
celery = "^5.0.5"
# pytest
pytest = "^6.2.2"
pytest-django = "^4.1.0"
# mypy
mypy = "^1.15.0"
# install extension stubs if missing
types-requests = "2.31.0.6"
types-setuptools = "^57.0.0"
types-dataclasses = "^0.1.5"
types-redis = "^3.5.4"
types-PyMySQL = "^1.0.0"
types-six = "^0.1.7"
types-toml = "^0.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
check_untyped_defs = true
exclude = ['^tests/models/apps/.*/migrations/.*$']
