[tool.poetry]
include = ["blue_krill/py.typed"]
classifiers = ["License :: OSI Approved :: MIT License"]

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "blue-krill"
description = "Tools and common packages for blueking PaaS platform."
requires-python = ">=3.11, <3.15"
license = "MIT"
version = "3.1.0"
# classifieres is dynamic because we want to create Python classifiers automatically
dynamic = ["classifiers"]
readme = "README.md"
authors = [{ name = "blueking", email = "blueking@tencent.com" }]
dependencies = [
  'cryptography (>=3.0.0)',
  'django-environ (>=0.8.1,<0.13.0)',
  'pyjwt (>=2.12.0,<3)',
  'requests',
  'click',
  'pydantic',
  'toml',
  'python-editor (>=1.0.4,<2.0.0)',
  'watchdog',
  'curlify (>=2.2.1,<4.0.0)',
  'bk-crypto-python-sdk (>=3.0.0)',
]

[project.urls]
Homepage = "https://github.com/TencentBlueKing/bkpaas-python-sdk/"
Repository = "https://github.com/TencentBlueKing/bkpaas-python-sdk/"

[project.scripts]
bk-secure = "blue_krill.secure.bk_secure:main"
editionctl = "blue_krill.editions.editionctl:main"


[tool.poetry.group.dev.dependencies]
redis = "^5.0.0"
django = "^5.2.0"
requests_mock = "^1.8.0"
requests-mock = "^1.8.0"
boto3 = "^1.34.0"
moto = { extras = ["s3"], version = "^5.0.0" }
django-rest-framework = "^0.1.0"
celery = "^5.0.5"
# pytest
pytest = "^8.0.0"
pytest-django = "^4.8.0"
# mypy
mypy = "^1.19.0"
# install extension stubs if missing
typing-extensions = "^4.15.0"
types-requests = "2.31.0.6"
types-setuptools = "^57.0.0"
types-redis = "^4.6.0"
types-PyMySQL = "^1.0.0"
types-toml = "^0.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
check_untyped_defs = true
exclude = ['^tests/models/apps/.*/migrations/.*$']
