[tool]
[tool.poetry]
name = "paas_service"
version = "2.0.1"
description = "A Django application for developing BK-PaaS add-on services."
readme = "README.md"
authors = ["blueking <blueking@tencent.com>"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/TencentBlueKing/bkpaas-python-sdk/"
Repository = "https://github.com/TencentBlueKing/bkpaas-python-sdk/"

[[tool.poetry.source]]
url = "https://mirrors.tencent.com/pypi/simple/"
name = "pypi-tencent-mirror"
default = true

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
jsonfield = "*"
pyjwt = "^2.4.0"
django-translated-fields = "*"
blue-krill = "^2.0.7"
django = "^4.2.16"
djangorestframework = "^3.15.2"

[tool.poetry.dev-dependencies]
django-dynamic-fixture = ">=4.0.1"
pytest = "*"
pytest-django = "*"
six = "==1.12.0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
skip-string-normalization = 'true'
exclude = '''
/(
    .*/migrations/.*
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = 'true'
force_grid_wrap = 0
use_parentheses = 'true'
line_length = 119

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "paas_service.migrations.*"
]
ignore_errors = true
