[tool.poetry]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "paas_service"
version = "2.0.3"
description = "A Django application for developing BK-PaaS add-on services."
readme = "README.md"
authors = [{ name = "blueking", email = "blueking@tencent.com" }]
license = "MIT"
# classifiers is dynamic because we want to create Python classifiers automatically
dynamic = ["classifiers"]
requires-python = ">=3.8,<3.12"
dependencies = [
    "jsonfield",
    "pyjwt (>=2.4.0,<3.0.0)",
    "django-translated-fields",
    "blue-krill (>=2.0.7,<3.0.0)",
    "django (>=4.2.16,<5.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "pydantic (==2.9.2)",
]

[project.urls]
Homepage = "https://github.com/TencentBlueKing/bkpaas-python-sdk/"
Repository = "https://github.com/TencentBlueKing/bkpaas-python-sdk/"

[tool.poetry.group.dev.dependencies]
django-dynamic-fixture = ">=4.0.1"
pytest = "*"
pytest-django = "*"
six = "==1.12.0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["paas_service.migrations.*"]
ignore_errors = true
